# habits

./: .gitignore  Auth.hs  Client.hs  README  Server.hs  State.hs  cabal.config  client.css  client.html  client.js  deploy  deploy.sh  habits.cabal  index.html  secret.tar.xz.aes  server.hs  slideshow.cabal
clj/: index.html  project.clj
clj/src/slideshow/: core.cljs
shitfuck/: client.html  client.js
