name: habits
version: 0.1.0.0
author: Benjamin Summers
maintainer: benjaminsummers1987@gmail.com
build-type: Simple
cabal-version: >=1.10

executable habits
  default-language:   Haskell2010
  ghc-options:        -Wall -Werror -threaded
  main-is:            Server.hs
  other-modules:
    Auth
    State

  default-extensions:
    DeriveDataTypeable
    FlexibleInstances
    LambdaCase
    NoImplicitPrelude
    OverloadedStrings
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TypeFamilies
    UnicodeSyntax

  build-depends:
    acid-state,
    aeson,
    base,
    base-unicode-symbols,
    base64-bytestring,
    bytestring,
    classy-prelude,
    clientsession,
    containers,
    http-types,
    lens,
    mtl,
    network,
    pwstore-fast,
    safecopy,
    template-haskell,
    text,
    time,
    wai,
    warp,
    warp-tls
