name: slideshow
version: 0.1.0.0
author: Benjamin Summers
maintainer: benjaminsummers1987@gmail.com
build-type: Simple
cabal-version: >=1.10

executable slideshow
    default-language: Haskell2010
    main-is: Server.hs
    build-depends:
        base, bytestring, clientsession, aeson, warp, wai, http-types, text,
        containers, safecopy, network, mtl, acid-state, base-unicode-symbols,
        classy-prelude
